[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A command-line program to help you add files to your personal archive"
edition = "2018"
keywords = ["dedupe", "archive", "backup"]
license = "Apache-2.0"
publish = false
name = "deduposaur"
readme = "Readme.md"
repository = "https://github.com/mleonhard/deduposaur"
version = "0.1.0"

[dependencies]

[dev-dependencies]
