[package]
authors = ["Michael Leonhard <michael@leonhardllc.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A command-line program to help you add files to your personal archive"
edition = "2018"
keywords = ["dedupe", "archive", "backup"]
license = "Apache-2.0"
name = "deduposaur"
readme = "Readme.md"
repository = "https://github.com/mleonhard/deduposaur"
version = "0.1.0"

[dependencies]
chrono = "^0.4.19"
filetime = "^0.2.14"
hex = "^0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["hex"] }
sha2 = "^0.9.5"
structopt = "^0.3.22"

[dev-dependencies]
assert_cmd = "1"
assert_that = "^0.1.2"
filetime = "^0.2.14"
predicates = "2"
temp-dir = "^0.1.11"
temp-file = "^0.1.6"
